--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -3,29 +3,34 @@
 @inject UserManager<IdentityUser> UserManager
 
 <div class="flex gap-4 items-center justify-end w-full md:w-[200px]">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-            
-        <div class="text-white duration-300 transition-all hover:text-[#e8e8e8]">
-            <a class='text-sm font-semibold text-black' asp-area="Identity" asp-page="/Account/Login">
+    @if (SignInManager.IsSignedIn(User))
+    {        <div class="text-sm font-semibold text-black duration-300 transition-all hover:text-[#e8e8e8]">
+            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                Hello, @User.Identity?.Name!
+            </a>
+        </div>
+
+        <div>
+            <form class="inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="bg-yellow text-black text-sm font-semibold py-2 px-5 rounded-full">
+                    Logout
+                </button>
+            </form>
+        </div>
+    }
+    else
+    {
+        <div class="text-sm font-semibold text-black duration-300 transition-all hover:text-[#e8e8e8]">
+            <a asp-area="Identity" asp-page="/Account/Login">
                 Login
             </a>
         </div>
-        <div class="">
-            <a  class='bg-yellow text-black text-sm font-semibold py-2 px-5 rounded-full' asp-area="Identity" asp-page="/Account/Register">
+
+        <div>
+            <a class="bg-yellow text-black text-sm font-semibold py-2 px-5 rounded-full" asp-area="Identity" asp-page="/Account/Register">
                 Sign Up
             </a>
         </div>
-}
+    }
 </div>
+
