--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -64,10 +64,8 @@
                 <div class="md:col-span-1 text-center md:text-left">
                     <h3 class="text-2xl font-extrabold mb-6">Let Us Help You</h3>
                     <ul class="space-y-4">
-                        <li><a href="#" class="hover:underline">Promotions</a></li>
-                        <li><a href="#" class="hover:underline">Register as User</a></li>
-                        <li><a href="#" class="hover:underline">Register as Restaurant</a></li>
-                        <li><a href="#" class="hover:underline">Restaurants Near Me</a></li>
+                        <li><a asp-area="Identity" asp-page="/Account/Register" class="hover:underline">Register as User</a></li>
+                        <li><a asp-controller="RestaurantRegistration" asp-action="Index" class="hover:underline">Register as Restaurant</a></li>
                     </ul>
                 </div>
 
