Save restaurant lat and long when registereing

--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
             </form>
         </div>
         <div class="text-sm font-semibold text-black duration-300 transition-all hover:text-[#e8e8e8]">
-            <a asp-controller="RestaurantRegistration" asp-action="Index" class="hover:underline">Register as Restaurant</a>
+            <a asp-controller="restaurantregistration" asp-action="Index" class="hover:underline">Register as Restaurant</a>
         </div>
     }
     else
