--- a/QuickBite/Views/Dashboard/Offers.cshtml
+++ b/QuickBite/Views/Dashboard/Offers.cshtml
@@ -4,4 +4,13 @@
     Layout = "_CustomerDashboardLayout";
 }
 
-<div>Offers</div>
+<div class="flex flex-col items-center justify-center min-h-screen p-6" style="width: 80vw;">
+    <div class="mb-6">
+        <img src="~/img/emailConfirmed.png" alt="Success Image." class="w-40 h-auto">
+    </div>
+    <div class="text-center">
+        <h1 class="text-2xl font-semibold text-gray-800">
+            No offers are available right now. Please check back soon!
+        </h1>
+    </div>
+</div>
