--- a/QuickBite/Views/Dashboard/Settings.cshtml
+++ b/QuickBite/Views/Dashboard/Settings.cshtml
@@ -4,7 +4,7 @@ ViewData["Title"] = "Dashboard";
 Layout = "_CustomerDashboardLayout";
 }
 
-<div class="mx-auto p-6 bg-white shadow-lg rounded-lg pt-12 pb-12" style="width:80vw; height: 100vh;">
+<div class="mx-auto p-6 shadow-lg rounded-lg pt-12 pb-12" style="width:80vw; height: 100vh;">
     <div class="mb-6">
         <h1 class="text-3xl font-semibold text-gray-800">Settings</h1>
     </div>
