--- a/QuickBite/Views/Shared/_Layout.cshtml
+++ b/QuickBite/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
 <header class='absolute left-0 top-0 z-10 w-full'>
     <nav class="flex items-center justify-between py-3 px-4 sm:px-10 w-full">
-        <div class="w-full flex justify-start md:ml-[100px] lg:ml-[150px] md:justify-center">
+        <div class="w-full flex justify-start md:ml-[100px] md:justify-center" style="margin-left:450px;">
             <div class="">
                 <a href="/" class='flex gap-1 items-center'>
                     <img src="~/icons/qbLogo.svg" alt="quickbite logo" width="100" height="100" class=''/>
