--- a/QuickBite/Views/Shared/_LoginPartial.cshtml
+++ b/QuickBite/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<div class="flex gap-4 items-center justify-end w-full md:w-[300px]">
+<div class="flex gap-4 items-center justify-end w-full" style="min-width: 450px;">
     @if (SignInManager.IsSignedIn(User))
     {        <div class="text-sm font-semibold text-black duration-300 transition-all hover:text-[#e8e8e8]">
             <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
