add navbar in customer dashboard

--- a/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
+++ b/QuickBite/Views/Shared/_CustomerDashboardLayout.cshtml
@@ -41,7 +41,7 @@
         
     </style>
 </head>
-<body class="flex">
+<body class="flex w-full">
     <div class="dashboard_sidebar" id="sidebar">
         <div class="flex items-center w-full justify-between gap-4">
             <a href="/" class="flex items-center">
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="w-full">
         <main role="main">
             @RenderBody()
         </main>
