--- a/QuickBite/Views/Dashboard/Index.cshtml
+++ b/QuickBite/Views/Dashboard/Index.cshtml
@@ -4,4 +4,24 @@
     Layout = "_CustomerDashboardLayout";
 }
 
-<div>Dashboard</div>
+<div class="flex flex-col w-full h-full">
+    <div class=" px-8 py-4 border-b border-gray-200 w-full">
+        <div class="flex justify-between items-center gap-1 w-full mx-auto container ">
+            <div class="bg-gray-100 flex items-center py-2 px-4 gap-2 rounded-10 w-half">
+                <img src="~/icons/search.png" class="w-6 h-6 " alt="search icon" />
+                <input placeholder="Search here..." class="bg-gray-100 outline-none" />
+            </div>
+            <div class="flex items-center gap-4">
+                <a class="bg-orange flex items-center gap-2 rounded-full px-3 py-1 " >
+                    <img src="~/icons/cart.png" class="w-4 h-4" alt="search icon" />
+                    <span class="text-white"> 0 </span>
+                </a>
+                <div class="">
+                    <span class=""> John Doe </span>
+                </div>
+            </div>
+            
+        </div>
+        
+    </div>
+</div>
