--- a/QuickBite/wwwroot/css/site.css
+++ b/QuickBite/wwwroot/css/site.css
@@ -784,6 +784,15 @@ html {
 .h-31 { height: 7.75rem; }
 .h-32 { height: 8rem; }
 
+.w-half{
+    width:50% !important;
+}
+.w-1/4{
+    width:25% !important;
+}
+.rounded-10{
+    border-radius:10px;
+}
 .text-xl{
   font-size: 2rem;
 }
