--- a/QuickBite/wwwroot/css/site.css
+++ b/QuickBite/wwwroot/css/site.css
@@ -8,22 +8,8 @@ html {
   position: relative;
   min-height: 100%;
 }
-.bg-green {
-    background-color: #7CB69D !important;
-}
-.bg-yellow {
-    background-color: #FFBE4A !important;
-}
-.text-black{
-    color:black !important;
-}
-.h-200{
-    height:200px !important;
-}
 /* Padding */
-.p-0 {
-    padding: 0rem;
-}
+.p-0 { padding: 0rem; }
 .p-1 { padding: 0.25rem; }
 .p-2 { padding: 0.5rem; }
 .p-3 { padding: 0.75rem; }
@@ -763,7 +749,6 @@ html {
 .w-31 { width: 7.75rem; }
 .w-32 { width: 8rem; }
 .w-64 { width: 42rem; }
-.w-200 { width:200px }
 /* Height */
 .h-0 { height: 0rem; }
 .h-1 { height: 0.25rem; }
@@ -802,7 +787,7 @@ html {
 .w-half{
     width:50% !important;
 }
-.w-14{
+.w-1/4{
     width:25% !important;
 }
 .rounded-10{
@@ -917,8 +902,4 @@ html {
 }
 .active_dashboard_link{
 
-}
-
-.red-heart {
-  filter: invert(27%) sepia(76%) saturate(6651%) hue-rotate(350deg) brightness(93%) contrast(104%);
 }
