Finish dashboard banner

--- a/QuickBite/Views/Dashboard/Index.cshtml
+++ b/QuickBite/Views/Dashboard/Index.cshtml
@@ -24,4 +24,32 @@
         </div>
         
     </div>
+    <div class="px-4 pt-10">
+        <div class="">
+            <h1 class="font-bold text-3xl">Get the Best of the Best</h1>
+            <div class="flex justify-start items-center gap-4 mt-4">
+                <div class="flex justify-between items-center gap-4 h-200 rounded-10 bg-orange px-4 py-3">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-white font-semibold text-lg">Get Unlimited $0 delivery fees on eligible QuickPass orders*</h2>
+                        <span class="text-white text-sm">Plus exclusive offers and savings</span>
+                        <a class="text-orange bg-white rounded-full px-8 py-3 w-200 font-semibold mt-4 text-center">Get QuickPass</a>
+                    </div>
+                    <div>
+                        <img src="~/img/delivery_img.png" class="w-full"/>
+                    </div>
+                </div>
+                <div class="flex justify-between items-center gap-4 rounded-10 h-200 bg-green px-4 py-3">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-white font-semibold text-lg">Get amazing and exclusive deals with Quickbite</h2>
+                        <span class="text-white text-sm">Plus exclusive offers and savings</span>
+                        <a href="/offers" class="text-orange bg-yellow rounded-full px-8 py-3 w-200 font-semibold text-black mt-4 text-center">View Offers</a>
+                    </div>
+                    <div>
+                        <img src="~/img/offer_img.png" class="w-40" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </div>
