--- a/QuickBite/Views/Dashboard/Index.cshtml
+++ b/QuickBite/Views/Dashboard/Index.cshtml
@@ -51,5 +51,116 @@
             </div>
         </div>
     </div>
+    <div class="px-4 pt-10">
+        <div class="">
+            <h1 class="font-bold text-3xl">Resturants Of The Day!</h1>
+            <div class="flex justify-start items-center gap-4 mt-4">
+                <div class="flex flex-col justify-center items-center ">
+                    <div>
+                        <img src="~/img/burger.png" class="w-full" />
+                    </div>
+                    <div class="flex justify-between w-full gap-2 mt-4">
+                        <div class="flex flex-col gap-2">
+                            <h2 class="text-gray-700 font-semibold text-lg">Large Burger</h2>
+                            <div class="flex items-center gap-1">
+                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
+                                <span class="text-gray-700 text-sm font-semibold">•</span>
+                                <span class="text-gray-700 text-sm font-semibold">12 mins</span>
+                            </div>
+                            <span class="text-gray-700 text-sm font-semibold">$0 CA Delivery Fee</span>
+                        </div>
+                        <div class="h-full flex flex-col gap-4 items-center justify-between">
+                            <div>
+                                <img src="~/icons/heart.png" class="w-full" />
+                            </div>
+                            <div>
+                                <img src="~/icons/addCart.png" class="w-full" />
+                            </div>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div>
+                        <img src="~/img/shwarma.png" class="w-full" />
+                    </div>
+                    <div class="flex justify-between w-full gap-2 mt-4">
+                        <div class="flex flex-col gap-2">
+                            <h2 class="text-gray-700 font-semibold text-lg">Shawarma</h2>
+                            <div class="flex items-center gap-1">
+                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
+                                <span class="text-gray-700 text-sm font-semibold">•</span>
+                                <span class="text-gray-700 text-sm font-semibold">9 mins</span>
+                            </div>
+                            <span class="text-gray-700 text-sm font-semibold">$3 CA Delivery Fee</span>
+                        </div>
+                        <div class="h-full flex flex-col gap-4 items-center justify-between">
+                            <div>
+                                <img src="~/icons/heart.png" class="w-full" />
+                            </div>
+                            <div>
+                                <img src="~/icons/addCart.png" class="w-full" />
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div>
+                        <img src="~/img/sushi.png" class="w-full" />
+                    </div>
+                    <div class="flex justify-between w-full gap-2 mt-4">
+                        <div class="flex flex-col gap-2">
+                            <h2 class="text-gray-700 font-semibold text-lg">Sushi</h2>
+                            <div class="flex items-center gap-1">
+                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
+                                <span class="text-gray-700 text-sm font-semibold">•</span>
+                                <span class="text-gray-700 text-sm font-semibold">20 mins</span>
+                            </div>
+                            <span class="text-gray-700 text-sm font-semibold">$6 CA Delivery Fee</span>
+                        </div>
+                        <div class="h-full flex flex-col gap-4 items-center justify-between">
+                            <div>
+                                <img src="~/icons/heart.png" class="w-full" />
+                            </div>
+                            <div>
+                                <img src="~/icons/addCart.png" class="w-full" />
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <div>
+                        <img src="~/img/burger.png" class="w-full" />
+                    </div>
+                    <div class="flex justify-between w-full gap-2 mt-4">
+                        <div class="flex flex-col gap-2">
+                            <h2 class="text-gray-700 font-semibold text-lg">Tacos</h2>
+                            <div class="flex items-center gap-1">
+                                <span class="text-gray-700 text-sm font-semibold">Delivery Time</span>
+                                <span class="text-gray-700 text-sm font-semibold">•</span>
+                                <span class="text-gray-700 text-sm font-semibold">10 mins</span>
+                            </div>
+                            <span class="text-gray-700 text-sm font-semibold">$1 CA Delivery Fee</span>
+                        </div>
+                        <div class="h-full flex flex-col gap-4 items-center justify-between">
+                            <div>
+                                <img src="~/icons/heart.png" class="w-full" />
+                            </div>
+                            <div>
+                                <img src="~/icons/addCart.png" class="w-full" />
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
     
 </div>
