--- a/QuickBite/Views/Dashboard/Favourites.cshtml
+++ b/QuickBite/Views/Dashboard/Favourites.cshtml
@@ -1,7 +1,107 @@
 @using QuickBite.Controllers
 @{
-    ViewData["Title"] = "Dashboard";
-    Layout = "_CustomerDashboardLayout";
+ViewData["Title"] = "Favourites";
+Layout = "_CustomerDashboardLayout";
 }
 
-<div>Dashboard</div>
+<div class="flex flex-col w-full h-full">
+    <div class="px-8 py-4 border-b border-gray-200 w-full">
+        <div class="flex justify-between items-center gap-1 w-full mx-auto container">
+            <div class="bg-gray-100 flex items-center py-2 px-4 gap-2 rounded-10 w-half">
+                <img src="~/icons/search.png" class="w-6 h-6" alt="search icon" />
+                <input placeholder="Search favourites..." class="bg-gray-100 outline-none" />
+            </div>
+            <div class="flex items-center gap-4">
+                <a class="bg-orange flex items-center gap-2 rounded-full px-3 py-1">
+                    <img src="~/icons/cart.png" class="w-4 h-4" alt="cart icon" />
+                    <span class="text-white"> 0 </span>
+                </a>
+                <div>
+                    <span> John Doe </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="px-4 pt-10">
+        <h1 class="font-bold text-3xl">Your Favourites</h1>
+        <div class="flex flex-wrap justify-start items-start gap-6 mt-6">
+            @* Favourite Items *@
+            <div class="flex flex-col justify-center items-center w-60">
+                <div>
+                    <img src="~/img/burger.png" class="w-full rounded-10" />
+                </div>
+                <div class="flex justify-between w-full gap-2 mt-4">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-gray-700 font-semibold text-lg">Large Burger</h2>
+                        <div class="flex items-center gap-1">
+                            <span class="text-gray-700 text-sm font-semibold">Delivery Time:</span>
+                            <span class="text-gray-700 text-sm font-semibold">12 mins</span>
+                        </div>
+                        <span class="text-gray-700 text-sm font-semibold">$0 CA Delivery Fee</span>
+                    </div>
+                    <div class="h-full flex flex-col gap-4 items-center justify-between">
+                        <img src="~/icons/heart.png" class="w-6 h-6 red-heart" alt="favourite icon" />
+                        <img src="~/icons/addCart.png" class="w-6 h-6" alt="add to cart icon" />
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center w-60">
+                <div>
+                    <img src="~/img/shwarma.png" class="w-full rounded-10" />
+                </div>
+                <div class="flex justify-between w-full gap-2 mt-4">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-gray-700 font-semibold text-lg">Shawarma</h2>
+                        <div class="flex items-center gap-1">
+                            <span class="text-gray-700 text-sm font-semibold">Delivery Time:</span>
+                            <span class="text-gray-700 text-sm font-semibold">9 mins</span>
+                        </div>
+                        <span class="text-gray-700 text-sm font-semibold">$3 CA Delivery Fee</span>
+                    </div>
+                    <div class="h-full flex flex-col gap-4 items-center justify-between">
+                        <img src="~/icons/heart.png" class="w-6 h-6 red-heart" alt="favourite icon" />
+                        <img src="~/icons/addCart.png" class="w-6 h-6" alt="add to cart icon" />
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center w-60">
+                <div>
+                    <img src="~/img/sushi.png" class="w-full rounded-10" />
+                </div>
+                <div class="flex justify-between w-full gap-2 mt-4">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-gray-700 font-semibold text-lg">Sushi</h2>
+                        <div class="flex items-center gap-1">
+                            <span class="text-gray-700 text-sm font-semibold">Delivery Time:</span>
+                            <span class="text-gray-700 text-sm font-semibold">20 mins</span>
+                        </div>
+                        <span class="text-gray-700 text-sm font-semibold">$6 CA Delivery Fee</span>
+                    </div>
+                    <div class="h-full flex flex-col gap-4 items-center justify-between">
+                        <img src="~/icons/heart.png" class="w-6 h-6 red-heart" alt="favourite icon" />
+                        <img src="~/icons/addCart.png" class="w-6 h-6" alt="add to cart icon" />
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center w-60">
+                <div>
+                    <img src="~/img/burger.png" class="w-full rounded-10" />
+                </div>
+                <div class="flex justify-between w-full gap-2 mt-4">
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-gray-700 font-semibold text-lg">Tacos</h2>
+                        <div class="flex items-center gap-1">
+                            <span class="text-gray-700 text-sm font-semibold">Delivery Time:</span>
+                            <span class="text-gray-700 text-sm font-semibold">10 mins</span>
+                        </div>
+                        <span class="text-gray-700 text-sm font-semibold">$1 CA Delivery Fee</span>
+                    </div>
+                    <div class="h-full flex flex-col gap-4 items-center justify-between">
+                        <img src="~/icons/heart.png" class="w-6 h-6 red-heart" alt="favourite icon" />
+                        <img src="~/icons/addCart.png" class="w-6 h-6" alt="add to cart icon" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
