--- a/QuickBite/Views/Dashboard/Orders.cshtml
+++ b/QuickBite/Views/Dashboard/Orders.cshtml
@@ -3,5 +3,40 @@
     ViewData["Title"] = "Dashboard";
     Layout = "_CustomerDashboardLayout";
 }
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
 
-<div>Orders</div>
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+</style>
+<div class="flex flex-col pt-20 px-10">
+    <h1 class="text-3xl font-bold">Orders</h1>
+
+
+        <table class="mt-4">
+            <tr class="bg-green  text-white">
+                <th class="py-2">Order Id</th>
+                <th class="py-2">Order Name</th>
+                <th class="py-2">Resturant</th>
+                <th class="py-2">Order Date</th>
+                <th class="py-2">Price</th>
+            </tr>
+            <tr>
+                <td>
+                    <img src="~/img/burger.png" class="w-40" />
+                </td>
+                <td>Large Burger with fries</td>
+                <td>A&W</td>
+                <td>06/10/2024</td>
+                <td>$12.99</td>
+            </tr>
+        </table>
+</div>
